umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_openbabel_razinger_fig7_63.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 35
bond_count: 38
sum_formula: C31NO3
graph6: bhc_GCP???_@?@OC_?G?@??G??O??G??G??C?C?????_??@???@????_???G???P??_???C???????G????GG?????????G?????_
