umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_pymol_4d09.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 30
bond_count: 34
sum_formula: C24N5O
graph6: "]hEGGC@AG?_@?HG???G?@??C??G??G??C??@??AG?A??G???A??????_???G???@????C???AG"
